[gd_scene load_steps=2 format=3 uid="uid://daxpsic4ci5r4"]

[ext_resource type="Script" path="res://ui/stats_container.gd" id="1_lx3if"]

[node name="StatsContainer" type="VBoxContainer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -28.0
offset_right = -50.0
offset_bottom = 28.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_lx3if")

[node name="BeesShot" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="name" type="Label" parent="BeesShot"]
layout_mode = 2
size_flags_horizontal = 8
text = "Bees Shot"

[node name="Control" type="Control" parent="BeesShot"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="BeesShot"]
layout_mode = 2
text = "100"

[node name="BeesBelled" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Name" type="Label" parent="BeesBelled"]
layout_mode = 2
text = "Bees Belled"

[node name="Control" type="Control" parent="BeesBelled"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="BeesBelled"]
layout_mode = 2
text = "100"

[node name="HivesDestroyed" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Name" type="Label" parent="HivesDestroyed"]
layout_mode = 2
text = "Hives Destroyed"

[node name="Control" type="Control" parent="HivesDestroyed"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="HivesDestroyed"]
layout_mode = 2
text = "100"
